* Added padding to fix misaligned bottom borders of container and table

--- a/src/App.css
+++ b/src/App.css
@@ -18,4 +18,5 @@
   margin: 40px 48px;
   border-radius: 16px;
   background-color: #ffffff;
+  padding-bottom: 16px;
 }
